# solana-breeding-

./: Anchor.toml  README.md  package-lock.json  package.json
app/: .env  package-lock.json
app/src/: App.js
client/: .env  .test-eslintrc-test.js  package-lock.json  package.json
client/public/: global.css  index.html
client/src/: App.css  App.tsx  Countdown.tsx  Home.tsx  MintButton.tsx  ParentChooseButton.tsx  ParentChooseModal.css  candy-machine.ts  countdown.css  index.css  index.tsx  userCSS.css  utils.ts
client/src/idl/: arcryptiannft_breeding_solana.json
client/src/lib/: BreedingAdapter.js  FetchNFTByCandymachine.js  FetchNFTs.js  FetchNFTsByWallet.js
programs/arcryptiannft-breeding-solana/: Cargo.toml
programs/arcryptiannft-breeding-solana/src/: contexts.rs  env.rs  lib.rs
scripts/: .env  abi.json  common.js  devnet.json  init.js
tests/: arcryptiannft-breeding-solana.js
tests/candymachine/: pubkey  test-info
tests/candymachine/adults/: config.json
tests/candymachine/adults/.cache/: devnet-example.json
tests/candymachine/adults/assets/: 0.json  1.json  2.json  3.json
tests/candymachine/babies/: config.json
tests/candymachine/babies/.cache/: devnet-example.json
tests/candymachine/babies/assets/: 0.json  1.json
tests/candymachine/egg/: config.json
tests/candymachine/egg/.cache/: devnet-example.json
tests/candymachine/egg/assets/: 0.json  1.json
