[package]
name = "arcryptiannft-breeding-solana"
version = "0.0.1"
description = "David Tanaka <realhardworkingdeveloper@gmail.com>"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcryptiannft_breeding_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"